src/test/testcases/errors/P2/public/assign02.mavl
function void main(){
    val int x = 22;
    
    // const assign error
    x = 33;
}
